fixing who-i-am bkg on mobile, no wrapping social icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,8 +141,8 @@ ul.navbar-main {
 }
 @media (max-width: 767px) {
     #who-i-am {
-        background: url('../img/office-full-mobile.jpg') no-repeat fixed 0 0;
-        background-size: cover;
+        background: url('../img/office-full-mobile.jpg') no-repeat 0 0;
+        min-height: 920px;
     }
 }
 #who-i-am h2 {
@@ -250,6 +250,11 @@ ul.contact-list li {
     display: inline-block;
     text-align: center;
     margin: 0 20px;
+}
+@media (max-width: 480px) {
+    ul.contact-list li {
+        margin: 0 5px;
+    }
 }
 ul.contact-list li a {
     color: #fff;
